--- a/app/src/main/res/layout/timesheets.xml
+++ b/app/src/main/res/layout/timesheets.xml
@@ -149,6 +149,7 @@
         android:id="@+id/categoriesSpinner"
         android:layout_width="143dp"
         android:layout_height="31dp"
+        android:layout_marginTop="16dp"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
