--- a/app/src/main/res/layout/item_timesheet.xml
+++ b/app/src/main/res/layout/item_timesheet.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="16dp"
@@ -8,32 +9,33 @@
 
     <TextView
         android:id="@+id/tvDate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="201dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="8dp"
         android:text="Wednesday 21 June"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/timesheetViewButton"
-        android:layout_marginEnd="8dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvTask"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="202dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="4dp"
         android:text="- Task 3"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        app:layout_constraintTop_toBottomOf="@+id/tvDate"
         app:layout_constraintStart_toStartOf="@+id/tvDate"
-        app:layout_constraintEnd_toStartOf="@+id/timesheetViewButton"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
-    <Button
-        android:id="@+id/timesheetViewButton"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="View"
-        android:background="@drawable/button_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    <ImageView
+        android:id="@+id/ivTaskImage"
+        android:layout_width="156dp"
+        android:layout_height="107dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvTask"
+        app:srcCompat="@android:mipmap/sym_def_app_icon"
+        tools:layout_editor_absoluteY="-6dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
