--- a/app/src/main/res/layout/timesheets.xml
+++ b/app/src/main/res/layout/timesheets.xml
@@ -163,7 +163,8 @@
         android:layout_weight="1"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintTop_toBottomOf="@+id/startDatePicker"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:listitem="@layout/recycler_view_item" />
 
     <TextView
         android:id="@+id/textView"
