--- a/app/src/main/res/layout/item_timesheet.xml
+++ b/app/src/main/res/layout/item_timesheet.xml
@@ -1,39 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#D9FAFE"
+    android:clipToPadding="false"
+    android:paddingHorizontal="24dp"
     android:paddingVertical="16dp"
-    android:paddingHorizontal="24dp">
+    android:paddingStart="5dp"
+    android:paddingEnd="0dp">
 
-    <TextView
-        android:id="@+id/tvDate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Wednesday 21 June"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintTop_toTopOf="parent"
+    <LinearLayout
+        android:layout_width="391dp"
+        android:layout_height="114dp"
+        android:background="#DAFBFF"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/timesheetViewButton"
-        android:layout_marginEnd="8dp"/>
+        tools:layout_editor_absoluteY="-19dp">
 
-    <TextView
-        android:id="@+id/tvTask"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="- Task 3"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        app:layout_constraintTop_toBottomOf="@+id/tvDate"
-        app:layout_constraintStart_toStartOf="@+id/tvDate"
-        app:layout_constraintEnd_toStartOf="@+id/timesheetViewButton"/>
+        <ImageView
+            android:id="@+id/ivTaskImage"
+            android:layout_width="121dp"
+            android:layout_height="match_parent"
+            app:srcCompat="@android:mipmap/sym_def_app_icon" />
 
-    <Button
-        android:id="@+id/timesheetViewButton"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="View"
-        android:background="@drawable/button_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:text="Wednesday 21 June"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+            <TextView
+                android:id="@+id/tvTask"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:layout_marginTop="4dp"
+                android:text="- Task 3"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
