--- a/app/src/main/res/layout/timesheets.xml
+++ b/app/src/main/res/layout/timesheets.xml
@@ -6,6 +6,98 @@
     android:background="@drawable/loginbackground">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/timeSheetsHeadingText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/acme"
+                android:text="Time Sheets"
+                android:textColor="#FFFFFF"
+                android:textSize="48sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal">
+
+                <DatePicker
+                    android:id="@+id/startDatePicker"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner" />
+
+                <DatePicker
+                    android:id="@+id/endDatePicker"
+                    android:layout_width="228dp"
+                    android:layout_height="wrap_content"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="159dp"
+                    android:layout_height="34dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="3dp"
+                    android:layout_marginBottom="11dp"
+                    android:fontFamily="@font/acme"
+                    android:gravity="center"
+                    android:lineSpacingExtra="8sp"
+                    android:text="hgfhgfhf"
+                    android:textAlignment="viewStart"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:typeface="normal" />
+
+                <Spinner
+                    android:id="@+id/categoriesSpinner"
+                    android:layout_width="143dp"
+                    android:layout_height="39dp"
+                    android:layout_gravity="center"
+                    android:background="@color/white"
+                    android:gravity="center" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/logRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="306dp"
+                android:layout_marginTop="11dp"
+                android:layout_marginBottom="27dp"
+                android:layout_weight="1"
+                android:background="#FFFFFF"
+                android:fadeScrollbars="true"
+                android:scrollbars="horizontal"
+                app:layout_marginBaseline="@dimen/cardview_compat_inset_shadow" />
+        </LinearLayout>
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/logHoursNavigationButton"
         android:layout_width="75dp"
@@ -18,8 +110,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/timeSheetsNavigationButton"
         app:layout_constraintStart_toEndOf="@+id/tasksNavigationButton"
-        tools:textSize="12sp"
-        />
+        tools:textSize="12sp" />
 
     <ImageButton
         android:id="@+id/homeNavigationButton"
@@ -109,69 +200,5 @@
         app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/timeSheetsHeadingText" />
-
-    <TextView
-        android:id="@+id/timeSheetsHeadingText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/acme"
-        android:text="Time Sheets"
-        android:textColor="#FFFFFF"
-        android:textSize="48sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <DatePicker
-        android:id="@+id/startDatePicker"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:calendarViewShown="false"
-        android:datePickerMode="spinner"
-        app:layout_constraintTop_toBottomOf="@id/timeSheetsHeadingText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/endDatePicker" />
-
-    <DatePicker
-        android:id="@+id/endDatePicker"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:calendarViewShown="false"
-        android:datePickerMode="spinner"
-        app:layout_constraintTop_toBottomOf="@id/timeSheetsHeadingText"
-        app:layout_constraintStart_toEndOf="@id/startDatePicker"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Spinner
-        android:id="@+id/categoriesSpinner"
-        android:layout_width="143dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logRecyclerView" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/logRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="150dp"
-        android:layout_weight="1"
-        app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintTop_toBottomOf="@+id/startDatePicker"
-        tools:layout_editor_absoluteX="16dp" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="414dp"
-        android:layout_height="104dp"
-        app:layout_constraintBottom_toBottomOf="@id/categoriesSpinner"
-        app:layout_constraintBottom_toTopOf="@id/accountsNavigationButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
