--- a/app/src/main/res/layout/tasks.xml
+++ b/app/src/main/res/layout/tasks.xml
@@ -265,8 +265,12 @@
         android:id="@+id/addGoalButton"
         android:layout_width="217dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#FBFBFB"
         android:text="Add a Goal"
         android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llTaskForm" />
@@ -275,8 +279,6 @@
         android:id="@+id/scrollViewGoals"
         android:layout_width="355dp"
         android:layout_height="260dp"
-        android:layout_marginBottom="56dp"
-        app:layout_constraintBottom_toTopOf="@+id/logHoursNavigationButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
