--- a/app/src/main/res/layout/loghours.xml
+++ b/app/src/main/res/layout/loghours.xml
@@ -139,8 +139,8 @@
         android:id="@+id/startTimePicker"
         android:layout_width="215dp"
         android:layout_height="100dp"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="-10dp"
+        android:layout_marginTop="20dp"
         android:background="#FDFDFD"
         android:timePickerMode="spinner"
         app:layout_constraintStart_toStartOf="parent"
@@ -164,54 +164,60 @@
         android:layout_marginEnd="12dp"
         android:background="#FDFDFD"
         android:backgroundTint="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/endTimePicker"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/endTimePicker" />
 
     <Button
         android:id="@+id/addImageButton"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="33dp"
         android:backgroundTint="#000000"
         android:text="Add Image"
-        app:layout_constraintTop_toBottomOf="@id/spinnerTask"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/spinnerTask"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startTimePicker" />
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="145dp"
-        android:layout_height="123dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="40dp"
-        app:layout_constraintTop_toBottomOf="@id/addImageButton"
+        android:layout_width="158dp"
+        android:layout_height="142dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="13dp"
+        app:layout_constraintEnd_toStartOf="@+id/descriptionText"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addImageButton"
         app:srcCompat="@android:drawable/gallery_thumb" />
 
     <EditText
         android:id="@+id/descriptionText"
-        android:layout_width="142dp"
-        android:layout_height="123dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
+        android:layout_width="215dp"
+        android:layout_height="143dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="9dp"
         android:background="#FDFDFD"
         android:hint="Description"
-        app:layout_constraintTop_toBottomOf="@id/addImageButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView1"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerTask"
         app:srcCompat="@android:drawable/gallery_thumb" />
 
     <Button
         android:id="@+id/logHoursButton"
         android:layout_width="233dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginStart="89dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="89dp"
         android:backgroundTint="#000000"
         android:text="Log Hours"
-        app:layout_constraintTop_toBottomOf="@id/imageView1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
